...
   //MARK:- Add new actions
   
   @IBAction func addButtonPressed(_ sender: UIBarButtonItem) {
      
      var textField = UITextField()
      
      let alert = UIAlertController(title: "Add New Item", message: "", preferredStyle: .alert)
      
      let action = UIAlertAction(title: "Add Item", style: .default) { (action) in
         self.itemArray.append(textField.text!)
         
         self.defaults.set(self.itemArray, forKey: "TodoListArry")
         
         self.tableView.reloadData()
      }
...
