...
   //MARK:- Add new Categories when button pressed
   
   
   @IBAction func addItemPressed(_ sender: Any) {
      var textField = UITextField()
      
      let alert = UIAlertController(title: "Add New Category", message: "", preferredStyle: .alert)
      let action = UIAlertAction(title: "Add Category", style: .default) { (action) in
         
        let newCategory = Category()
        newCategory.name = textField.text!
        self.save(category: newCategory)
      }
      
...
