...
//////////////////////////////////////////////////////////////
   //MARK:- Add New Scenario
   
   @IBAction func addButtonPressed(_ sender: UIBarButtonItem) {
      var textField = UITextField()
      let alert = UIAlertController(title: "Add New Scenario", message: "", preferredStyle: .alert)
      let action = UIAlertAction(title: "Add", style: .default) { (action) in
        
         if let currentCategory = self.selectedCategory {
            do {
              try self.realm.write {
                let newScenario = Scenario()
                newScenario.title = textField.text!
...
