//
//  ToDoeyUITests.swift
//  ToDoeyUITests
//
//  Created by Taylor Batch on 10/31/18.
//  Copyright © 2018 burgeoning. All rights reserved.
//

import XCTest

class ToDoeyUITests: XCTestCase {

    override func setUp() {
        // Put setup code here. This method is called before the invocation of each test method in the class.

        // In UI tests it is usually best to stop immediately when a failure occurs.
        continueAfterFailure = false

        // UI tests must launch the application that they test. Doing this in setup will make sure it happens for each test method.
        XCUIApplication().launch()

        // In UI tests it’s important to set the initial state - such as interface orientation - required for your tests before they run. The setUp method is a good place to do this.
    }

    override func tearDown() {
        // Put teardown code here. This method is called after the invocation of each test method in the class.
    }

    func testExample() {
        // Use recording to get started writing UI tests.
      
      let app = XCUIApplication()
      app.navigationBars["ToDoey"].buttons["Add"].tap()
      app.alerts["Add New Category"].buttons["Add Category"].tap()
      app.tables/*@START_MENU_TOKEN@*/.staticTexts["new1"]/*[[".cells.staticTexts[\"new1\"]",".staticTexts[\"new1\"]"],[[[-1,1],[-1,0]]],[0]]@END_MENU_TOKEN@*/.tap()
      app.navigationBars["new1"].buttons["Add"].tap()
      app.alerts["Add New Item"].buttons["Add Item"].tap()
        // Use XCTAssert and related functions to verify your tests produce the correct results.
    }

}
